Dev-RBI/src/objects/Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Stores the Discount offered for a particular plan type</description>
        <label>Discount %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Type_Hyperlink__c</fullName>
        <description>This field is used in the related list of the project for the hyperlink</description>
        <formula>HYPERLINK(&quot;/&quot; + Id,  Plan_Type__r.Name, &quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store plan type for List of value object</description>
        <label>Plan Type</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPaymentPlanUniqueKeyUpdate__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProjectPaymentPlanUniqueKeyUpdate</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores relationship with project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Id__c</fullName>
        <formula>Visit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores relationship with Visit</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPId- {0000000000}</displayFormat>
        <label>Payment Plan Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Id_Should_Not_be_blank_for_PMS_V</fullName>
        <active>true</active>
        <description>Project ID field should be blank for all the entities associated with PMS Visit</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Project_Id__c )), 
NOT(ISBLANK( Visit__c )) 

)</errorConditionFormula>
        <errorMessage>Please ensure that either Project Id or Visit Id is blank!</errorMessage>
    </validationRules>
</CustomObject>